--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.1.3",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "3.1.0",
+    "@openzeppelin/contracts": "3.4.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "axios": "^0.20.0",
@@ -31,7 +32,7 @@
     "commander": "^6.1.0",
     "ethereum-waffle": "^3.0.0",
     "ethereumjs-util": "^7.0.4",
-    "ethers": "^5.0.0",
+    "ethers": "^5.4.0",
     "hardhat": "^2.5.0",
     "mocha": "^6.2.2",
     "prettier": "^2.0.5",
